<resources>
    <string name="app_name">Mate</string>
    <string name="login_title">경운대학교\n카풀 서비스</string>
    <string name="login_content">간편하게 가입하고 \n카풀 서비스를 이용해보세요</string>
    <string name="login_register">시작하기</string>
    <string name="login_id_check">이미 아이디가 있으신가요?</string>
    <string name="login_start"><u>로그인 하기</u></string>
    <string name="login_input_name">이름을 입력해주세요.</string>
    <string name="login_name">이름</string>
    <string name="login_confirm">확인</string>
    <string name="login_next">다음</string>
    <string name="login_finish">완료하기</string>
    <string name="login_name_example">예: 홍길동</string>
    <string name="login_input_student_number">학번을 입력해주세요.</string>
    <string name="login_input_student_major">학과를 입력해주세요.</string>
    <string name="login_input_number">전화번호를 입력해주세요.</string>
    <string name="login_input_type">사용자 유형을 선택해주세요.</string>
    <string name="login_input_profile">프로필 사진을 설정해주세요.</string>
    <string name="login_input_login">로그인 하기</string>
    <string name="login_input_day">이용할 요일을 선택해주세요.</string>
    <string name="login_student_number">학번</string>
    <string name="login_student_number_example">예: 123@</string>
    <string name="login_student_major">학과</string>
    <string name="login_number">전화번호</string>
    <string name="login_major">학과</string>
    <string name="login_student_major_example">예: 미학과</string>
    <string name="login_number_example">예: 01011111111</string>
    <string name="login_type_content">드라이버는 자차보유자를, 패신저는 승객(이용자)를 뜻합니다.\n추후에 변경 가능합니다.</string>
    <string name="login_profile_content">미설정시, 기본이미지로 자동설정됩니다.</string>
    <string name="home_no_reservation">예약된 카풀이 없습니다</string>
    <string name="home_no_list">생성한 카풀이 없습니다</string>
    <string name="home_show_mycarpool">내 카풀 보기</string>
    <string name="ticket_bording">탑승하기</string>
    <string name="로그인하기">로그인하기</string>
    <string name="출발지역">출발 지역을 선택해 주세요</string>
    <string name="탑승장소">예: 안동사우나 앞</string>
    <string name="출발날짜">MM/dd 예:11/30</string>
    <string name="출발시간">시간을 입력해주세요.</string>
    <string name="여객자동차운수사업법">여객자동차 운수사업법 제81조 1항에 따라 유료 카풀의 경우 오전 07:00-09:00사이에 운행이 가능해요. 09:00 이후에는 운행이 종료돼야해요. (휴일, 공휴일은 유료 카풀 불가)</string>
    <string name="오픈채팅방링크">링크를 붙여넣기 해주세요.</string>
    <string name="탑승인원비용선택">탑승 인원/비용을 입력해주세요.</string>
    <string name="탑승인원">탑승 인원</string>
    <string name="탑승인원힌트">탑승 최대인원을 선택해주세요.</string>
    <string name="탑승비용">탑승 비용(1인 기준)</string>
    <string name="탑승비용입력">비용을 입력해주세요.</string>
    <string name="선택">선택</string>
    <string name="title_activity_main">MainActivity</string>
</resources>