<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_login_title"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/login_input_student_major"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout_student_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_login_title">

            <TextView
                android:id="@+id/text_student_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_student_major"
                android:textColor="@color/black_151515"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edit_student_major"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@+id/text_student_major"
                android:background="@drawable/round_10_gray"
                android:hint="@string/login_student_major_example"
                android:paddingStart="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_student_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_student_major"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/text_student_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_student_number"
                android:textColor="@color/black_151515"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edit_student_number"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@+id/text_student_number"
                android:background="@drawable/round_10_gray"
                android:enabled="false"
                android:hint="@string/login_student_number_example"
                android:paddingStart="5dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_student_number"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textColor="@color/black_151515"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@+id/text_name"
                android:background="@drawable/round_10_gray"
                android:enabled="false"
                android:hint="@string/login_name_example"
                android:paddingStart="5dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:height="50dp"
            android:background="@drawable/round_100_blue"
            android:gravity="center"
            android:text="@string/login_next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>