<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="navController"
            type="androidx.navigation.NavController" />
        <variable
            name="registerViewModel"
            type="com.mate.carpool.data.viewmodel.RegisterViewModel" />
        <import type="com.mate.carpool.R"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_login_type"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/login_input_number"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_login_type">

            <TextView
                android:id="@+id/text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_number"
                android:textColor="@color/black_151515"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@+id/text_number"
                android:background="@drawable/round_10_gray"
                android:hint="@string/login_number_example"
                android:paddingStart="5dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:height="50dp"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:text="@string/login_next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>
